# fastapi-gcr-miniprex

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
