[tool.poetry]
name = "gcloud-run-fastapi-miniprex"
version = "0.1.0"
description = ""
authors = ["Mengyang (John) Cha <15233508+solarapparition@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "gcloud_run_api"}]

[tool.poetry.dependencies]
python = "=3.10.*"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
